<resources>
    <string name="app_name">Vimu</string>
    <string name="registro">¿No tienes cuenta? Registrate</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contrasenya">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="confirma_contrasenya">Confirma contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="comprar">Comprar</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="mis_entradas">Mis entradas</string>
    <string name="mis_favoritos">Mis favoritos</string>
    <string name="guardar">Guardar</string>
    <string name="rese_ar">Reseñar</string>
    <string name="eliminar_concierto">Eliminar concierto</string>
    <string name="comprar_entradas">Comprar entradas</string>
    <string name="nuevo_concierto">Nuevo concierto</string>
    <string name="buscar">Buscar</string>
    <string name="buscar_conciertos">Buscar conciertos</string>
    <string name="perfil">Perfil</string>
    <string name="logo">Logo</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="cantidad_entradas">Cantidad entradas</string>
    <string name="precio_entradas">Precio entradas</string>
    <string name="cantidad_entradas_vip">Cantidad entradas VIP</string>
    <string name="precio_entradas_vip">Precio entradas VIP</string>
    <string name="grupo">Grupo</string>
    <string name="recinto">Recinto</string>
</resources>