<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/primary"
    tools:context=".actividades.DatosConciertoActivity">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="383dp"
        android:layout_height="53dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="157dp"
            android:layout_height="53dp"
            android:contentDescription="Logo"
            android:src="@drawable/logo1" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="Perfil"
            android:src="@drawable/perfil" />
    </LinearLayout>

    <ImageView
        android:id="@+id/conciertoImage"
        android:layout_width="226dp"
        android:layout_height="285dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />


    <TextView
        android:id="@+id/tituloConcierto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Nombre del concierto"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conciertoImage" />

    <LinearLayout
        android:id="@+id/infoBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloConcierto">

        <TextView
            android:id="@+id/grupoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Artista: Hoke"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/recintoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recinto: Garaje Beat Club"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fechaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha: 2024-06-27"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/horaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hora: 22:30"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ciudadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ciudad: Murcia"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/comprar_entradas"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBox" />

    <Button
        android:id="@+id/eliminarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:text="@string/eliminar_concierto"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBox" />

    <TextView
        android:id="@+id/normalesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="Entradas normales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBox" />

    <Spinner
        android:id="@+id/spinnerNormales"
        android:layout_width="330dp"
        android:textColor="@color/black"
        android:layout_height="25dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoBox" />

    <TextView
        android:id="@+id/vipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        android:text="Entradas VIP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBox" />

    <Spinner
        android:id="@+id/spinnerVips"
        android:layout_width="330dp"
        android:layout_height="25dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerNormales" />

    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnFavorito"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary"
            android:text="@string/guardar"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary"
            android:text="@string/comprar"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>